Added Slamrensing build files

--- a/spidercage.html
+++ b/spidercage.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Spidercage Digital Twin</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <link rel="shortcut icon" href="TemplateData/favicon.png">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
@@ -33,7 +33,34 @@
       </div>
     </div>
     
-    <p style="width: 100%; text-align: left; margin-top: 30px; margin-bottom: 30px;">This is a demo made for Spidercage, who builds autonomous fish farms.</p>
+    <div style="width: 100%; text-align: left; margin-top: 30px; margin-bottom: 30px;">
+    
+  Welcome to the Spidercage Digital Twin Demo! Play around with it as much as you want!
+
+  <h3>A Next-Generation Aquaculture Solution</h3>
+  <p>Spidercage is a groundbreaking aquaculture project that will change the way fish are farmed in the future. It is a fully automated, unmanned fish farm located in the open sea, designed to withstand harsh weather conditions. This innovative concept is set to revolutionize the aquaculture industry by enabling the production of high-quality fish in a sustainable and efficient manner.</p>
+
+  <h3>The Power of the Digital Twin</h3>
+  <p>Our digital twin demo showcases how real-time data from mobile and static sensors can optimize operations and enhance decision-making in this state-of-the-art facility. Click on "Demo" in the menu bar to see how a subsea drone can perform autonomous inspections.</p>
+
+  <h3>Potential Operational Use Cases</h3>
+  <ul>
+    <li><b>Remote Monitoring and Control:</b> Manage all aspects of the Spidercage facility from anywhere in the world, 24/7.</li>
+    <li><b>Real-time Heave Compensation Monitoring:</b> Continuously track the performance of the heave compensation system, ensuring optimal fish welfare and safety in dynamic sea conditions.</li>
+    <li><b>Early Disease Detection:</b> Identify potential health issues in fish populations through data analytics and implement timely interventions.</li>
+    <li><b>Automated Operations:</b> Streamline routine tasks such as cleaning and maintenance using autonomous systems.</li>
+    <li><b>Reduced Operational Costs:</b> Optimize resource allocation, minimize waste, and improve energy efficiency.</li>
+  </ul>
+
+  <h3>Experience the Future of Aquaculture</h3>
+  <p>Explore our digital twin demo and discover how Spidercage is shaping the future of sustainable and efficient fish farming.</p>
+
+
+  <div style="text-align: center; width: 100%; margin-top: 30px;">
+    <iframe style="border-radius: 10px; width: 95%; aspect-ratio: 16/9; margin: auto;" src="https://www.youtube.com/embed/qSfIgVjFiMo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+
+    </div>
 
   </div>
     <script>
