--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Twilligent Digital Twin</title>
+    <title>Twilligent Demos</title>
     <link rel="shortcut icon" href="TemplateData/favicon.png">
     <link rel="stylesheet" href="TemplateData/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,7 +30,7 @@
           </td>
           <td style="width: 33%; padding: 20px">
             <div class="container"> 
-              <a href="./spidercage.html">
+              <a href="./water-treatment-plant.html">
                 <img src="./TemplateData/slamrensing-thumbnail.png" width="100%" style="border-radius: 10px;"/>
                 <div class="title">Water Treatment Plant</div>
               </a>
