--- a/3d-scan.html
+++ b/3d-scan.html
@@ -21,7 +21,7 @@
     <div id="unity-container" class="unity-desktop">
     <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
       <div id="unity-loading-bar">
-        <div id="unity-logo"></div>
+        <div id="unity-logo"><img src="TemplateData/loading.gif" height="100%" width="auto"></img></div>
         <div id="unity-progress-bar-empty">
           <div id="unity-progress-bar-full"></div>
         </div>
